# ai-infra-radar

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: daily-update.yml  daily.yml
app/: streamlit_app.py
data/sample/: sample.db
src/radar/: __init__.py  __main__.py  cli.py  config.py  db.py  digest.py  matching.py  models.py  sample_data.py  schema.sql  scoring.py  search.py  tagging.py
src/radar/collectors/: __init__.py  arxiv_collector.py  github_collector.py
tests/: test_arxiv_parser.py  test_config.py  test_db.py  test_digest.py  test_github_parser.py  test_matching.py  test_sample_data.py  test_scoring.py  test_tagging.py
