[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-infra-radar"
version = "0.1.0"
description = "Track which AI research ideas are turning into real code."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI Infra Radar contributors" }]
dependencies = [
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "streamlit>=1.36.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
radar = "radar.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
radar = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
